Fix background not showing up in the main menu

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url('./Assets/mainmenubg.png'); 
+    background-image: url('./assets/mainmenubg.png'); 
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat; 
